Fix hero stats vertical alignment

--- a/styles.css
+++ b/styles.css
@@ -364,6 +364,9 @@ a {
 
 .stat {
     text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
 }
 
 .stat-number-row {
@@ -376,6 +379,11 @@ a {
     font-size: 3rem;
     color: var(--color-white);
     line-height: 1;
+    display: block;
+}
+
+.stat-number-row .stat-number {
+    display: inline;
 }
 
 .stat-suffix {
